--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.11",
-    "ts-fsrs": "^5.2.1"
+    "ts-fsrs": "^5.2.1",
+    "octokit": "^4.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
