--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "leetsrs",
   "description": "A spaced repetition extension for LeetCode problems",
   "private": true,
-  "version": "0.1.5",
+  "version": "0.2.0",
   "license": "MIT",
   "author": "Matt Drake",
   "type": "module",
@@ -32,7 +32,8 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.11",
-    "ts-fsrs": "^5.2.1"
+    "ts-fsrs": "^5.2.1",
+    "octokit": "^4.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
