--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
     "@tanstack/react-query": "^5.84.1",
     "@tanstack/react-query-devtools": "^5.84.1",
     "chart.js": "^4.5.0",
+    "octokit": "^4.1.2",
     "react": "^19.1.0",
     "react-aria-components": "^1.11.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "tailwindcss": "^4.1.11",
-    "ts-fsrs": "^5.2.1",
-    "octokit": "^4.1.2"
+    "ts-fsrs": "^5.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
@@ -51,7 +51,7 @@
     "eslint-plugin-prettier": "^5.5.3",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "happy-dom": "^18.0.1",
+    "happy-dom": "^20.3.4",
     "prettier": "^3.6.2",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
