--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,14 +31,12 @@ jobs:
         run: |
           PKG_VERSION=$(node -p "require('./package.json').version")
           LOCK_VERSION=$(node -p "require('./package-lock.json').version")
-          CONFIG_VERSION=$(grep -oP "APP_VERSION = '\K[^']+" shared/config.ts)
 
           echo "package.json version: $PKG_VERSION"
           echo "package-lock.json version: $LOCK_VERSION"
-          echo "shared/config.ts version: $CONFIG_VERSION"
 
-          if [ "$PKG_VERSION" != "$LOCK_VERSION" ] || [ "$PKG_VERSION" != "$CONFIG_VERSION" ]; then
-            echo "::error::Version mismatch detected! All versions must match."
+          if [ "$PKG_VERSION" != "$LOCK_VERSION" ]; then
+            echo "::error::Version mismatch between package.json and package-lock.json!"
             exit 1
           fi
           echo "All versions match: $PKG_VERSION"
